fixed footer spacing

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -15,7 +15,7 @@ body {
 header h1 {
   /* Make bigger and color, change our font family to a sans serif */
   margin: auto;
-  padding: 40px 20px 15px 20px;
+  padding: 50px 20px 15px 20px;
   background-color: #ffffff;
   color: #8569b4;
   font-size: 265%;
@@ -97,7 +97,7 @@ figure {
 
 figure img {
 /* figure, we want to center that using margin:auto */  
-  width: 38%;
+  width: 36%;
   padding: 80px 16px 10px 16px;
   margin: 0px auto; 
 }  
@@ -105,12 +105,11 @@ figure img {
 figcaption {
   margin: 0px auto;
   width: 40%;
-  padding: 20px 10px 51px 235px;
+  padding: 15px 10px 51px 235px;
   text-align: center;
   font-size: 12px;
   line-height: 16px;
 }
-
 
 footer  {
   clear: both;
@@ -127,9 +126,10 @@ footer ul li {
 }
 
 footer ul li img {
-  width: 5%;
+  width: 5.35%;
   padding: 8px 18px;
   margin-top: 25px;
+  margin-bottom: 40px;
   float: left;
   display: block;
 }
